# impostor_game_bot

./: .env.example  .gitignore  Makefile  README.md  example_words.txt  main.db  pyproject.toml
app/: bot.py  db.py  game_functions.py
